[Running] Fix issue running.
