# product-api-v3/routes/product.routes.go
@@ -19,8 +19,8 @@ func (pc *ProductRouteController) ProductRoute(rg *gin.RouterGroup) {
 	// router.Use(middleware.MiddlewareValidateProduct())
 	router.GET("/", pc.productController.GetAllProducts)
 	router.GET("/:id", pc.productController.GetProductByID)
-	router.GET("/:name", pc.productController.GetProductByName)
-	router.GET("/:category", pc.productController.GetProductByCategory)
+	router.GET("/", pc.productController.GetProductByName)
+	router.GET("/", pc.productController.GetProductByCategory)
 	router.POST("/", pc.productController.AddProduct)
 	router.PATCH("/:id", pc.productController.UpdateProduct)
 	router.DELETE("/:id", pc.productController.DeleteProductByID)
